# apisniff

./: .gitignore  .gitleaksignore  .goreleaser.yaml  .goreleaser.yml  CHANGELOG.md  CONTRIBUTING.md  HARDENING-RESULTS.md  LICENSE  PHASE1-RESULTS.md  PHASE2-RESULTS.md  PHASE3-RESULTS.md  PHASE4-RESULTS.md  PHASE5-RESULTS.md  PHASE6-RESULTS.md  PLAN-GO-PORT.md  README.md  SECURITY.md  go.mod  go.sum  pyproject.toml  testing-policy.md
.github/workflows/: ci.yml  release.yml
cmd/apisniff/: main.go
docs/: spec.md
docs/commands/: analyze.md  probe.md  recon.md  replay.md  share.md  spec.md
docs/demos/: capture.py  probe.tape  spec.tape
docs/guides/: capture-formats.md  getting-started.md  workflows.md
internal/adapter/: burp.go  burp_test.go  detect.go  domain.go  domain_test.go  fuzz_test.go  har.go  har_test.go  headers.go  jsonl.go
internal/auth/: detector.go  detector_test.go  policy.go  policy_test.go
scripts/: generate_command_docs.py  update_homebrew_formula.py
signatures/: challenge_indicators.yaml
spikes/: PHASE0-RESULTS.md  README.md
tests/: conftest.py  test_adapters.py  test_analyze.py  test_auth.py  test_bundle.py  test_burp.py  test_classify.py  test_cli.py  test_cli_contracts.py  test_fixtures.py  test_har.py  test_homebrew_formula.py  test_live_smoke.py  test_mitmproxy.py  test_models.py  test_openapi_invariants.py  test_output.py  test_probe.py  test_probe_hermetic.py  test_proxy.py  test_rate_limit.py  test_recon.py  test_redaction.py  test_replay.py  test_replay_hermetic.py  test_report.py  test_share.py  test_spec.py  test_vendors.py
(+152 files in other folders)
