[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apisniff"
version = "0.1.1"
description = "One tool for API recon: preflight defenses, capture real traffic, extract a usable spec."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Aaron Lau" }]
keywords = ["api", "reverse-engineering", "mitmproxy", "openapi", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0",
    "httpx>=0.27.0",
    "curl-cffi>=0.7.0",
    "mitmproxy>=12.0,<13.0",
    "pyyaml>=6.0",
    "tldextract>=5.0",
]

[project.scripts]
apisniff = "apisniff.cli:app"

[project.urls]
Homepage = "https://github.com/4LAU/apisniff"
Issues = "https://github.com/4LAU/apisniff/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "hypothesis>=6.100.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
